convert index to md

--- a/python-school/index.ipynb
+++ b/python-school/index.ipynb
@@ -1,49 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/restructuredtext"
-   },
-   "source": [
-    ".. meta::\n",
-    "\n",
-    "   :description: Introductive guide to coding, data cleaning and analysis for Python 3, with many worked exercises."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "# SoftPython"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/latex"
-   },
-   "source": [
-    "% Latex fixes, DO NOT DELETE THIS !!!!\n",
-    "\n",
-    "% need to demote chapters to sections because sphinx promotes them *just in the home* :-/\n",
-    "% https://tex.stackexchange.com/questions/161259/macro-for-promoting-sections-to-chapters\n",
-    "% for alternatives, see https://texfaq.org/FAQ-patch\n",
-    "\n",
-    "\\let\\truechapter\\chapter\n",
-    "\\let\\truesection\\section\n",
-    "\\let\\truesubsection\\subsection\n",
-    "\\let\\truesubsubsection\\subsubsection\n",
-    "\\let\\truethesection\\thesection\n",
-    "\n",
-    "\\let\\chapter\\truesection\n",
-    "\\let\\section\\truesubsection\n",
-    "% suspend number printing , according to   https://tex.stackexchange.com/a/80114\n",
-    "\\renewcommand\\thesection{}\n",
-    "\n",
-    "\\truesection{Preface}"
    ]
   },
   {
@@ -54,72 +17,10 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/html"
-   },
-   "source": [
-    "<p>\n",
-    "DOWNLOAD: &nbsp;&nbsp;<a href=\"https://en.softpython.org/softpython-en.pdf\" target=\"_blank\">PDF</a>\n",
-    "&nbsp;&nbsp;<a href=\"http://en.softpython.org/softpython-en.epub\" target=\"_blank\"> EPUB </a>\n",
-    "&nbsp;&nbsp;<a href=\"https://github.com/DavidLeoni/softpython-en/archive/en.softpython.org.zip\" target=\"_blank\"> HTML </a>\n",
-    "&nbsp;&nbsp; <a href=\"https://github.com/DavidLeoni/softpython-en\" target=\"_blank\"> Github </a>\n",
-    "</p>\n",
-    "<br/>\n",
-    "<br/>\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Nowadays, more and more decisions are taken upon factual and objective data. All disciplines, from engineering to social sciences, require to elaborate data and extract actionable information by analysing heterogenous sources. This book of practical exercises gives an introduction to coding and data processing using [Python](https://www.python.org), a programming language popular both in the industry and in research environments."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/html"
-   },
-   "source": [
-    "<a id=\"news\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## News\n",
-    "\n",
-    "23 August 2023\n",
-    "\n",
-    "- restyling!\n",
-    "- restructured [analytics with pandas](#pandas):\n",
-    "    - separated notebooks into 1. intro and 2. advanced (grouping, merging, geopandas)\n",
-    "    - moved exercise notebook 2 (eures) to [worked projects section](projects/eures/eures-sol.ipynb)\n",
-    "    - renamed dataset into astropi.csv reming ROW_ID column and substituted with time_stamp\n",
-    "    - added paragraphs to first notebook\n",
-    "    - added meteo pressure intervals exercise\n",
-    "- matrices-lists1: added [visiting with style paragraph](matrices-lists/matrices-lists1-sol.ipynb#Visiting-with-style)\n",
-    "- lists3: added copy/deepcopy paragraph\n",
-    "- Python tutor now always show data structures as non-nested\n",
-    "- strings1: added paragraph on f-strings\n",
-    "- sets1: added paragraph 'What can we search?'\n",
-    "- formats2-csv: swapped 'with' when reading and writing \n",
-    "\n",
-    "Old news: [link](changelog.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/latex"
-   },
-   "source": [
-    "% Latex: fix for book structure\n",
-    "\n",
-    "\\let\\thesection\\truethesection\n",
-    "\\truechapter{Overview}"
    ]
   },
   {
@@ -128,7 +29,7 @@
    "source": [
     "## Intended audience\n",
     "\n",
-    "This book can be useful for both novices who never really programmed before, and for students with more techical background, who desire to know about data extraction, cleaning, analysis and visualization (among used frameworks there are Pandas, Numpy and Jupyter editor). Data is going to be processed in a practical way, without delving into more advanced considerations about algorithmic complexity and data structures. To overcome issues and guarantee concrete didactical results, step-by-step tutorials are presented. "
+    "This book can be useful for both novices who never really programmed before, and for students with more techical background, who desire to know about data extraction, cleaning, analysis and visualization (among used frameworks there are Polars, Numpy and Jupyter editor). Data is going to be processed in a practical way, without delving into more advanced considerations about algorithmic complexity and data structures. To overcome issues and guarantee concrete didactical results, step-by-step tutorials are presented. "
    ]
   },
   {
@@ -154,15 +55,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/html"
-   },
-   "source": [
-    "<a id=\"license\"></a>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,53 +62,9 @@
     "\n",
     "The making of this website and related courses was funded by [Department of Information Engineering and Computer Science (DISI)](https://www.disi.unitn.it), University of Trento, and also [Sociology](https://www.sociologia.unitn.it/en) and [Mathematics](https://www.maths.unitn.it/en) departments.\n",
     "\n",
-    "![unitn-843724](_static/img/third-parties/disi-unitn-en-logo-468-153.png)\n",
-    "\n",
-    "![cc-by-7172829](_static/img/cc-by.png)\n",
-    "\n",
     "Unless otherwise noted, the material in this website is original and distributed with license CC-BY 4.0 International Attribution [https://creativecommons.org/licenses/by/4.0/deed.en](https://creativecommons.org/licenses/by/4.0/deed.en). Basically, you can freely redistribute and modify the written content, just remember to cite University of Trento and [the authors](https://en.softpython.org/index.html#Author) \n",
     "\n",
-    "Datasets from [Data analysis](#data-analysis) and [Worked projects](#worked-projects) sections might have some restrictions, sources are citated in the pages where they are used. Other third party resources are listed in [third-party-licences.txt](third-party-licences.txt)\n",
-    "\n",
-    "Technical notes: all website pages are easily modifiable Jupyter notebooks, that were  converted to web pages using [NBSphinx](https://nbsphinx.readthedocs.io) and [Jupman](https://jupman.softpython.org) template. Text sources are on Github at [https://github.com/DavidLeoni/softpython-en](https://github.com/DavidLeoni/softpython-en)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/html"
-   },
-   "source": [
-    "<a id=\"acknowledgments\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Acknowledgments\n",
-    "\n",
-    "We thank in particular professor Alberto Montresor of Department of Information Engineering and Computer Science, University of Trento to have allowed the making of first courses from which this material was born from, and the project Trentino Open Data ([dati.trentino.it](https://dati.trentino.it)) for the numerous datasets provided.\n",
-    "\n",
-    "![dati-trentino-9327234823487](_static/img/third-parties/dati-trentino-small.png)\n",
-    "\n",
-    "<!--Other numerous intitutions and companies that over time contributed material and ideas are cited [in this page](thanks.ipynb)-->"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "raw_mimetype": "text/latex"
-   },
-   "source": [
-    "% Latex: Restores all the previous substitutions \n",
-    "% DO NOT DELETE THIS !!!!\n",
-    " \n",
-    "\\let\\chapter\\truechapter\n",
-    "\\let\\section\\truesection\n",
-    "\\let\\subsection\\truesubsection\n",
-    "\\let\\subsubsection\\truesubsubsection"
+    "Technical notes: all website pages are easily modifiable Jupyter notebooks, that were  converted to web pages using [Jupyter Book](https://jupyterbook.org/)."
    ]
   }
  ],
@@ -237,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.17"
+   "version": "3.10.14"
   },
   "toc": {
    "base_numbering": 1,
