Fix heading levels

--- a/python-school/data_files/2-csv-sol.ipynb
+++ b/python-school/data_files/2-csv-sol.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "We will try to open some CSV, taking into consideration the possible problems we might get. CSVs are not necessarily the perfect solution for everything, but they offer more control over reading and typically if there are conversion problems is because we made a mistake, and not because the reader module decided on its own to exchange days with months in dates.\n",
     "\n",
-    "### Why parsing a CSV ?\n",
+    "## Why parsing a CSV ?\n",
     "\n",
     "To load and process CSVs there exist many powerful and intuitive modules such as Pandas in Python or R dataframes. Yet, in this notebook we will load CSVs using the most simple method possible, that is reading row by row, mimicking the method already seen in the previous part of the tutorial. Don't think this method is primitive or stupid, according to the situation it may save the day. How? Some files may potentially occupy huge amounts of memory, and in moder laptops as of 2019 we only have 4 gigabytes of RAM, the memory where Python stores variables. Given this, Python base functions to read files try their best to avoid loading everything in RAM. Tyipcally a file is read sequentially one piece at a time, putting in RAM only one row at a time."
    ]
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading a CSV\n",
+    "## Reading a CSV\n",
     "\n",
     "We will start with artifical example CSV. Let's look at [example-1.csv](data/example-1.csv) which you can find in the same folder as this Jupyter notebook. It contains animals with their expected lifespan:\n",
     "\n",
@@ -737,8 +737,7 @@
     "    my_writer = csv.writer(csvfile_out, delimiter=',')    \n",
     "    my_writer.writerow(['This', 'is', 'a header'])\n",
     "    my_writer.writerow(['some', 'example', 'data'])\n",
-    "    my_writer.writerow(['some', 'other', 'example data'])\n",
-    "    "
+    "    my_writer.writerow(['some', 'other', 'example data'])"
    ]
   },
   {
@@ -1291,7 +1290,7 @@
     "            lst.append(d)\n",
     "    return lst\n",
     "\n",
-    "air_quality = load_air_quality('air-quality.csv')\n",
+    "air_quality = load_air_quality('data/air-quality.csv')\n",
     "air_quality[:5]"
    ]
   },
