Add dictionary JSON example

--- a/python-school/data_files/3-json-sol.ipynb
+++ b/python-school/data_files/3-json-sol.ipynb
@@ -23,67 +23,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "File [bike-sharing-lavis.json](bike-sharing-lavis.json):\n",
-    "\n",
-    "```json\n",
-    "[\n",
-    "  {\n",
-    "    \"name\": \"Grazioli\",\n",
-    "    \"address\": \"Piazza Grazioli - Lavis\",\n",
-    "    \"id\": \"Grazioli - Lavis\",\n",
-    "    \"bikes\": 3,\n",
-    "    \"slots\": 7,\n",
-    "    \"totalSlots\": 10,\n",
-    "    \"position\": [\n",
-    "      46.139732902099794,\n",
-    "      11.111516155225331\n",
-    "    ]\n",
-    "  },\n",
-    "  {\n",
-    "    \"name\": \"Pressano\",\n",
-    "    \"address\": \"Piazza della Croce - Pressano\",\n",
-    "    \"id\": \"Pressano - Lavis\",\n",
-    "    \"bikes\": 2,\n",
-    "    \"slots\": 5,\n",
-    "    \"totalSlots\": 7,\n",
-    "    \"position\": [\n",
-    "      46.15368174037716,\n",
-    "      11.106601229430453\n",
-    "    ]\n",
-    "  },\n",
-    "  {\n",
-    "    \"name\": \"Stazione RFI\",\n",
-    "    \"address\": \"Via Stazione - Lavis\",\n",
-    "    \"id\": \"Stazione RFI - Lavis\",\n",
-    "    \"bikes\": 4,\n",
-    "    \"slots\": 6,\n",
-    "    \"totalSlots\": 10,\n",
-    "    \"position\": [\n",
-    "      46.148180371138814,\n",
-    "      11.096753997622727\n",
-    "    ]\n",
-    "  }\n",
-    "]\n",
-    "\n",
-    "```\n",
-    "\n",
-    "\n"
+    "As you can see, the json format is very similar to data structures we already have in Python, such as strings, integer numbers, floats, lists and dictionaries. The only difference are the json `null` fields which become `None` in Python. So the conversion to Python is almost always easy and painless, to perform it you can use the native Python module called `json`. Let's first import it: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the json format is very similar to data structures we already have in Python, such as strings, integer numbers, floats, lists and dictionaries. The only difference are the json `null` fields which become `None` in Python. So the conversion to Python is almost always easy and painless, to perform it you can use the native Python module called `json`. Let's first import it: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
+    "## JSON as a single dictionary"
    ]
   },
   {
@@ -102,22 +59,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Grazioli', 'address': 'Piazza Grazioli - Lavis', 'id': 'Grazioli - Lavis', 'bikes': 3, 'slots': 7, 'totalSlots': 10, 'position': [46.139732902099794, 11.111516155225331]}, {'name': 'Pressano', 'address': 'Piazza della Croce - Pressano', 'id': 'Pressano - Lavis', 'bikes': 2, 'slots': 5, 'totalSlots': 7, 'position': [46.15368174037716, 11.106601229430453]}, {'name': 'Stazione RFI', 'address': 'Via Stazione - Lavis', 'id': 'Stazione RFI - Lavis', 'bikes': 4, 'slots': 6, 'totalSlots': 10, 'position': [46.148180371138814, 11.096753997622727]}]\n"
+      "{'address': ['Piazza Grazioli - Lavis',\n",
+      "             'Piazza della Croce - Pressano',\n",
+      "             'Via Stazione - Lavis'],\n",
+      " 'bikes': [3, 2, 4],\n",
+      " 'id': ['Grazioli - Lavis', 'Pressano - Lavis', 'Stazione RFI - Lavis'],\n",
+      " 'name': ['Grazioli', 'Pressano', 'Stazione RFI'],\n",
+      " 'position': [[46.139732902099794, 11.111516155225331],\n",
+      "              [46.15368174037716, 11.106601229430453],\n",
+      "              [46.148180371138814, 11.096753997622727]],\n",
+      " 'slots': [7, 5, 6],\n",
+      " 'totalSlots': [10, 7, 10]}\n"
      ]
     }
    ],
    "source": [
-    "with open('data/bike-sharing-lavis.json') as f:\n",
+    "with open('data/bike-sharing-lavis-single.json') as f:\n",
     "    python_content = json.load(f)\n",
     "    \n",
-    "print(python_content)"
+    "pprint(python_content)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that what we've just read with the function `json.load` is not simple text anymore, but Python objects. For this json, the most external object is a list (note the square brackets at the file beginning and end). We can check using `type` on `python_content`:"
+    "Notice that what we've just read with the function `json.load` is not simple text anymore, but Python objects. For this json, the most external object is a dictionary (note the curly brackets at the file beginning and end). We can check using `type` on `python_content`:"
    ]
   },
   {
@@ -128,10 +95,91 @@
     {
      "data": {
       "text/plain": [
-       "list"
+       "dict"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(python_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JSON as list of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A JSON file can also take the form of a list of dictionaries, like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'address': 'Piazza Grazioli - Lavis',\n",
+      "  'bikes': 3,\n",
+      "  'id': 'Grazioli - Lavis',\n",
+      "  'name': 'Grazioli',\n",
+      "  'position': [46.139732902099794, 11.111516155225331],\n",
+      "  'slots': 7,\n",
+      "  'totalSlots': 10},\n",
+      " {'address': 'Piazza della Croce - Pressano',\n",
+      "  'bikes': 2,\n",
+      "  'id': 'Pressano - Lavis',\n",
+      "  'name': 'Pressano',\n",
+      "  'position': [46.15368174037716, 11.106601229430453],\n",
+      "  'slots': 5,\n",
+      "  'totalSlots': 7},\n",
+      " {'address': 'Via Stazione - Lavis',\n",
+      "  'bikes': 4,\n",
+      "  'id': 'Stazione RFI - Lavis',\n",
+      "  'name': 'Stazione RFI',\n",
+      "  'position': [46.148180371138814, 11.096753997622727],\n",
+      "  'slots': 6,\n",
+      "  'totalSlots': 10}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data/bike-sharing-lavis.json') as f:\n",
+    "    python_content = json.load(f)\n",
+    "    \n",
+    "pprint(python_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this json, the most external object is a list (note the square brackets at the file beginning and end). We can check using `type` on `python_content`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +212,7 @@
        " 'position': [46.139732902099794, 11.111516155225331]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +239,7 @@
        "'Piazza Grazioli - Lavis'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +266,7 @@
        "[46.139732902099794, 11.111516155225331]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### JSONL\n",
+    "## JSONL\n",
     "\n",
     "There is a particular JSON file type which is called [JSONL](http://jsonlines.org/) (note the _L_ at the end), which is a text file containing a sequence of lines, each representing a valid json object.\n",
     "\n",
@@ -265,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +325,11 @@
       "Object  1\n",
       "{'name': 'Paolo', 'surname': 'Bianchi'}\n",
       "Object  2\n",
-      "{'name': 'Luca', 'surname': 'Verdi'}\n"
+      "{'name': 'Luca', 'surname': 'Verdi'}\n",
+      "Object  3\n",
+      "{'a': 'b'}\n",
+      "Object  4\n",
+      "{'a': 'b'}\n"
      ]
     }
    ],
@@ -321,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we use the flag `\"a\"` to signify we want to _**a**ppend_ content to the file. This way, no need to re-read the whole file again in order to add content to it."
+    "Here we use the flag `\"a\"` to signify we want to _**a**ppend_ content to the file. This way, no need to read the whole file again in order to add content to it."
    ]
   },
   {
