--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -829,6 +829,8 @@
     "\n",
     "### Selecting columns\n",
     "\n",
+    "![](img/df_select.png)\n",
+    "\n",
     "If we want a subset of columns, we pass the name of each column to `.select()`:"
    ]
   },
@@ -889,7 +891,9 @@
    "id": "4e99652c",
    "metadata": {},
    "source": [
-    "### Selecting and modifying"
+    "### Selecting and modifying\n",
+    "\n",
+    "![](img/df_select_modify.png)"
    ]
   },
   {
@@ -1101,6 +1105,8 @@
    "metadata": {},
    "source": [
     "### Adding columns\n",
+    "\n",
+    "![](img/df_with_columns.png)\n",
     "\n",
     "To keep existing columns and add new ones, the `.with_columns()` method will come in handy. Let's try to get the duration in days of all the protests in our dataset. First let's find out what columns could help us here:"
    ]
@@ -1559,7 +1565,9 @@
    "id": "7116e678",
    "metadata": {},
    "source": [
-    "### Selecting rows fulfilling some conditions"
+    "### Selecting rows fulfilling some conditions\n",
+    "\n",
+    "![](img/df_filter.png)"
    ]
   },
   {
