--- a/python-school/visualization/1-basics-sol.ipynb
+++ b/python-school/visualization/1-basics-sol.ipynb
@@ -38,14 +38,12 @@
         "Matplotlib graphs your data on `Figure`s (e.g., windows, Jupyter\n",
         "widgets, etc.), each of which can contain one or more `Axes`, an\n",
         "area where points can be specified in terms of x-y coordinates. The simplest way of\n",
-        "creating a Figure with an Axes is using `plt.subplots()`. We can then use\n",
-        "`Axes.plot()` to draw some data on the Axes, and `plt.show()` to display\n",
-        "the figure:"
+        "creating a Figure with an Axes is using `plt.subplots()`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "collapsed": false
       },
@@ -63,19 +61,20 @@
       ],
       "source": [
         "fig, ax = plt.subplots()             # Create a figure containing a single Axes.\n",
-        "ax.plot([1, 2, 3, 4], [1, 4, 2, 3])  # Plot some data on the Axes.\n",
-        "plt.show()                           # Show the figure."
+        "ax.plot([1, 2, 3, 4], [1, 4, 2, 3]); # Plot some data on the Axes."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Depending on the environment you are working in, ``plt.show()`` can be left\n",
-        "out. This is for example the case with Jupyter notebooks, which\n",
-        "automatically show all figures created in a code cell.\n",
-        "\n",
-        "\n",
+        "When outside of an interactive environment such as Jupyter, you'll need to call `fig.show()` to see the figure."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Parts of a Figure\n",
         "\n",
         "Here are the components of a Matplotlib Figure.\n",
@@ -110,7 +109,25 @@
         "that additionally create Axes objects inside the Figure, but you can also\n",
         "manually add Axes later on.\n",
         "\n",
-        "All of these functions accept a `figsize` argument, that specifies in a tuple the `(width, height)` of the figure."
+        "All of these functions accept a `figsize` argument, that specifies in a tuple the `(width, height)` of the figure.\n",
+        "\n",
+        "Figures may be saved using `fig.savefig()`. For instance, to save the previous figure, you can run:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig.savefig(\"figure.pdf\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Common save formats are `.png`, `.jpg` or `.pdf`. "
       ]
     },
     {
