Set right dataset hyperlink

--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -2119,7 +2119,7 @@
    "source": [
     "### Exercise - Game of Thrones\n",
     "\n",
-    "Open with Polars the file [game-of-thrones.csv](game-of-thrones.csv) which holds episodes from various years.\n",
+    "Open with Polars the file [game-of-thrones.csv](data/game-of-thrones.csv) which holds episodes from various years.\n",
     "\n",
     "- **IMPORTANT**: place the dataframe into the variable `game`, so not to confuse it with previous dataframes\n",
     "\n",
