--- a/python-school/dataframes/1-basics-sol.ipynb
+++ b/python-school/dataframes/1-basics-sol.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "8a2deaa1",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "b8957768",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "└┘"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "55d99d1d",
    "metadata": {
     "tags": [
@@ -172,7 +172,7 @@
        "└───────┴──────┘"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "e9b77425",
    "metadata": {
     "tags": [
@@ -230,7 +230,7 @@
        "└───────┴──────┘"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "e60b7bf0",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "└────────────┴─────────────┴───────┴──────┴───┴─────────────┴────────────┴────────────┴────────────┘"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "9dee4f1f",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "25568534",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "6e82ead0",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        " 'sources']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "4d7b09d5",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "(17145, 30)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "39cbd29e",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "1b753800",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "└───────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "da3d2ab6",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
        "└───────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "c7774781",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
        "└───────────────────┘"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "a782b744",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "└──────────────────────────────┘"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,87 @@
     "\n",
     "![](img/df_with_columns.png)\n",
     "\n",
-    "To keep existing columns and add new ones, the `.with_columns()` method will come in handy. Let's try to get the duration in days of all the protests in our dataset. First let's find out what columns could help us here:"
+    "To keep existing columns and add new ones, the `.with_columns()` method will come in handy. \n",
+    "\n",
+    "Let's first see how to add a new column using data from outside the dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c424191a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 32)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>country</th><th>ccode</th><th>year</th><th>region</th><th>protest</th><th>protestnumber</th><th>startday</th><th>startmonth</th><th>startyear</th><th>endday</th><th>endmonth</th><th>endyear</th><th>protesterviolence</th><th>location</th><th>participants_category</th><th>participants</th><th>protesteridentity</th><th>protesterdemand1</th><th>protesterdemand2</th><th>protesterdemand3</th><th>protesterdemand4</th><th>stateresponse1</th><th>stateresponse2</th><th>stateresponse3</th><th>stateresponse4</th><th>stateresponse5</th><th>stateresponse6</th><th>stateresponse7</th><th>sources</th><th>from_scalar</th><th>from_series</th></tr><tr><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i64</td></tr></thead><tbody><tr><td>201990001</td><td>&quot;Canada&quot;</td><td>20</td><td>1990</td><td>&quot;North America&quot;</td><td>1</td><td>1</td><td>15</td><td>1</td><td>1990</td><td>15</td><td>1</td><td>1990</td><td>0</td><td>&quot;national&quot;</td><td>null</td><td>&quot;1000s&quot;</td><td>&quot;unspecified&quot;</td><td>&quot;political behavior, process&quot;</td><td>&quot;labor wage dispute&quot;</td><td>null</td><td>null</td><td>&quot;ignore&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;1. great canadian train journe…</td><td>&quot;a&quot;</td><td>0</td></tr><tr><td>201990002</td><td>&quot;Canada&quot;</td><td>20</td><td>1990</td><td>&quot;North America&quot;</td><td>1</td><td>2</td><td>25</td><td>6</td><td>1990</td><td>25</td><td>6</td><td>1990</td><td>0</td><td>&quot;Montreal, Quebec&quot;</td><td>null</td><td>&quot;1000&quot;</td><td>&quot;unspecified&quot;</td><td>&quot;political behavior, process&quot;</td><td>null</td><td>null</td><td>null</td><td>&quot;ignore&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;1. autonomy s cry revived in q…</td><td>&quot;a&quot;</td><td>1</td></tr><tr><td>201990003</td><td>&quot;Canada&quot;</td><td>20</td><td>1990</td><td>&quot;North America&quot;</td><td>1</td><td>3</td><td>1</td><td>7</td><td>1990</td><td>1</td><td>7</td><td>1990</td><td>0</td><td>&quot;Montreal, Quebec&quot;</td><td>null</td><td>&quot;500&quot;</td><td>&quot;separatist parti quebecois&quot;</td><td>&quot;political behavior, process&quot;</td><td>null</td><td>null</td><td>null</td><td>&quot;ignore&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;1. quebec protest after queen …</td><td>&quot;a&quot;</td><td>2</td></tr><tr><td>201990004</td><td>&quot;Canada&quot;</td><td>20</td><td>1990</td><td>&quot;North America&quot;</td><td>1</td><td>4</td><td>12</td><td>7</td><td>1990</td><td>6</td><td>9</td><td>1990</td><td>1</td><td>&quot;Montreal, Quebec&quot;</td><td>null</td><td>&quot;100s&quot;</td><td>&quot;mohawk indians&quot;</td><td>&quot;land farm issue&quot;</td><td>null</td><td>null</td><td>null</td><td>&quot;accomodation&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;1. indians gather as siege int…</td><td>&quot;a&quot;</td><td>3</td></tr><tr><td>201990005</td><td>&quot;Canada&quot;</td><td>20</td><td>1990</td><td>&quot;North America&quot;</td><td>1</td><td>5</td><td>14</td><td>8</td><td>1990</td><td>15</td><td>8</td><td>1990</td><td>1</td><td>&quot;Montreal, Quebec&quot;</td><td>null</td><td>&quot;950&quot;</td><td>&quot;local residents&quot;</td><td>&quot;political behavior, process&quot;</td><td>null</td><td>null</td><td>null</td><td>&quot;crowd dispersal&quot;</td><td>&quot;arrests&quot;</td><td>&quot;accomodation&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>&quot;1. dozens hurt in mohawk block…</td><td>&quot;a&quot;</td><td>4</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 32)\n",
+       "┌───────────┬─────────┬───────┬──────┬───┬──────────────┬──────────────┬─────────────┬─────────────┐\n",
+       "│ id        ┆ country ┆ ccode ┆ year ┆ … ┆ staterespons ┆ sources      ┆ from_scalar ┆ from_series │\n",
+       "│ ---       ┆ ---     ┆ ---   ┆ ---  ┆   ┆ e7           ┆ ---          ┆ ---         ┆ ---         │\n",
+       "│ i64       ┆ str     ┆ i64   ┆ i64  ┆   ┆ ---          ┆ str          ┆ str         ┆ i64         │\n",
+       "│           ┆         ┆       ┆      ┆   ┆ str          ┆              ┆             ┆             │\n",
+       "╞═══════════╪═════════╪═══════╪══════╪═══╪══════════════╪══════════════╪═════════════╪═════════════╡\n",
+       "│ 201990001 ┆ Canada  ┆ 20    ┆ 1990 ┆ … ┆ null         ┆ 1. great     ┆ a           ┆ 0           │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ canadian     ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ train        ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ journe…      ┆             ┆             │\n",
+       "│ 201990002 ┆ Canada  ┆ 20    ┆ 1990 ┆ … ┆ null         ┆ 1. autonomy  ┆ a           ┆ 1           │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ s cry        ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ revived in   ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ q…           ┆             ┆             │\n",
+       "│ 201990003 ┆ Canada  ┆ 20    ┆ 1990 ┆ … ┆ null         ┆ 1. quebec    ┆ a           ┆ 2           │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ protest      ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ after queen  ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ …            ┆             ┆             │\n",
+       "│ 201990004 ┆ Canada  ┆ 20    ┆ 1990 ┆ … ┆ null         ┆ 1. indians   ┆ a           ┆ 3           │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ gather as    ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ siege int…   ┆             ┆             │\n",
+       "│ 201990005 ┆ Canada  ┆ 20    ┆ 1990 ┆ … ┆ null         ┆ 1. dozens    ┆ a           ┆ 4           │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ hurt in      ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ mohawk       ┆             ┆             │\n",
+       "│           ┆         ┆       ┆      ┆   ┆              ┆ block…       ┆             ┆             │\n",
+       "└───────────┴─────────┴───────┴──────┴───┴──────────────┴──────────────┴─────────────┴─────────────┘"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "protests.with_columns(\n",
+    "    from_scalar=pl.lit(\"a\"),\n",
+    "    from_series=pl.Series(list(range(protests.shape[0]))),\n",
+    ").head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b33d81",
+   "metadata": {},
+   "source": [
+    "We've covered two cases here:\n",
+    "- when you'd like to have a column filled with the same value, you will need to specify you're providing the literal value you want in each row with `pl.lit()`,\n",
+    "- when you want to provide directly all the values to put in rows, you will need `pl.Series()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9bc5dec",
+   "metadata": {},
+   "source": [
+    "Now, let's see how to add columns using the values from existing ones. We'll try to get the duration in days of all the protests in our dataset. To that end, let's first find out what columns could help us here:"
    ]
   },
   {
